add process to bubble

--- a/bubble/index.html
+++ b/bubble/index.html
@@ -66,14 +66,33 @@
 <h2 class="parttitle">RESEARCH</h2>
 
 <img class="ecosystem" src="assets/img/ecosystem.png"></img>
+<table class="imgrid">
+  <tr>
+    <th class="grid4" ><img class="imgingrid" src="assets/process/eco1.png" alt="intel bubble" ></img></th>
+    <th class="grid4" ><img class="imgingrid" src="assets/process/eco2.png" alt="intel bubble" ></img></th>
+  </tr>
+</table>
+
 <p class="description mapdescription">Through secondary research, we found that <span class="hilight">64% of children are bullied but don't report it</span> because they feel embarrassment, retaliation, and feel that they deserve it. </br></br> We also found that <span class="hilight">more than half of bullying stops when peer intervention occurs on behalf of the student</span> because they are supported, acknowledged, and as part of a community.</p>
 <!-- <h3 class="note1">Eco-system map</h3> -->
 <!-- <h2 class="parttitle">Journey Map</h2> -->
 <img class="journeymap" src="assets/img/journeymap.svg"></img>
+<table class="imgrid">
+  <tr>
+    <th class="grid4" ><img class="imgingrid" src="assets/process/journey1.png" alt="intel bubble" ></img></th>
+    <th class="grid4" ><img class="imgingrid" src="assets/process/journey2.png" alt="intel bubble" ></img></th>
+  </tr>
+</table>
 <!-- <h3 class="note1">Journey Map</h3> -->
 <!-- <h2 class="parttitle">App System</h2> -->
 <p class="description mapdescription">According to the user journey, we found opportunities in stages: <span class="hilight">before bullying</span>, <span class="hilight">during bullying</span>, and <span class="hilight">after bullying</span>. </br></br>Therefore, we came up with 3 major use cases, <span class="hilight">Education</span>, <span class="hilight">Emergency</span>, and <span class="hilight">Protection</span>, to aim at problems of the 3 bully problems.</p>
 <img class="journeymap" src="assets/img/appsystem.svg"></img>
+<table class="imgrid">
+  <tr>
+    <th class="grid4" ><img class="imgingrid" src="assets/process/process1.png" alt="intel bubble" ></img></th>
+    <th class="grid4" ><img class="imgingrid" src="assets/process/process2.png" alt="intel bubble" ></img></th>
+  </tr>
+</table>
 </div>
 
 <div id="ux">
@@ -119,14 +138,14 @@ Not all students have access to a smartphone, but all students have an ID card. 
     <!-- <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">User Groups</span><br>At the Login screen, we separate students, teachers, and parents because the content specifically targets to different user groups. </p></th> -->
   </tr>
 
-<!-- 
+<!--
   <tr>
     <th class="grid4" ><img class="imgingrid" src="assets/img/login.png" alt="intel bubble"></img></th>
     <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">User Groups</span><br>We find that most students don't report to teachers because they don't know what happened after they report. Therefore, we designed a system loop that will update the investigate progress to students. In order to encourage students to report, we should keep their faith first.
 </p></th>
   </tr>
-  
-  
+
+
   <tr>
     <th class="grid4" ><img class="imgingrid" src="assets/img/report.png" alt="intel bubble" ></img></th>
     <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">What card?</span><br>Not all students have access to a smart phone, but all students have an ID catd. It also allows them to ring the alert without looking at the phone in uncontrolled situation. Additionally, people can also find students if earthquake happens.</p></th>
