process on the mobile

--- a/bubble/index.html
+++ b/bubble/index.html
@@ -63,36 +63,52 @@
  -->
 
 <div id="research">
-<h2 class="parttitle">RESEARCH</h2>
+  <h2 class="parttitle">RESEARCH</h2>
 
-<img class="ecosystem" src="assets/img/ecosystem.png"></img>
-<table class="imgrid">
-  <tr>
-    <th class="grid4" ><img class="imgingrid" src="assets/process/eco1.png" alt="intel bubble" ></img></th>
-    <th class="grid4" ><img class="imgingrid" src="assets/process/eco2.png" alt="intel bubble" ></img></th>
-  </tr>
-</table>
+  <img class="ecosystem" src="assets/img/ecosystem.png"></img>
+  <table class="imgrid">
+    <tr>
+      <th class="grid4" ><img class="imgingrid" src="assets/process/eco1.png" alt="intel bubble" ></img></th>
+      <th class="grid4" ><img class="imgingrid" src="assets/process/eco2.png" alt="intel bubble" ></img></th>
+    </tr>
+  </table>
 
-<p class="description mapdescription">Through secondary research, we found that <span class="hilight">64% of children are bullied but don't report it</span> because they feel embarrassment, retaliation, and feel that they deserve it. </br></br> We also found that <span class="hilight">more than half of bullying stops when peer intervention occurs on behalf of the student</span> because they are supported, acknowledged, and as part of a community.</p>
+  <div class="gallery">
+    <div><img class="imgingrid" src="assets/process/eco1.png" alt="intel bubble" ></img></div>
+    <div><img class="imgingrid" src="assets/process/eco2.png" alt="intel bubble" ></img></div>
+  </div>
+
+  <p class="description mapdescription">Through secondary research, we found that <span class="hilight">64% of children are bullied but don't report it</span> because they feel embarrassment, retaliation, and feel that they deserve it. </br></br> We also found that <span class="hilight">more than half of bullying stops when peer intervention occurs on behalf of the student</span> because they are supported, acknowledged, and as part of a community.</p>
 <!-- <h3 class="note1">Eco-system map</h3> -->
 <!-- <h2 class="parttitle">Journey Map</h2> -->
-<img class="journeymap" src="assets/img/journeymap.svg"></img>
-<table class="imgrid">
-  <tr>
-    <th class="grid4" ><img class="imgingrid" src="assets/process/journey1.png" alt="intel bubble" ></img></th>
-    <th class="grid4" ><img class="imgingrid" src="assets/process/journey2.png" alt="intel bubble" ></img></th>
-  </tr>
-</table>
+  <img class="journeymap" src="assets/img/journeymap.svg"></img>
+  <table class="imgrid">
+    <tr>
+      <th class="grid4" ><img class="imgingrid" src="assets/process/journey1.png" alt="intel bubble" ></img></th>
+      <th class="grid4" ><img class="imgingrid" src="assets/process/journey2.png" alt="intel bubble" ></img></th>
+    </tr>
+  </table>
+
+  <div class="gallery">
+    <div><img class="imgingrid" src="assets/process/journey1.png" alt="intel bubble" ></img></div>
+    <div><img class="imgingrid" src="assets/process/journey2.png" alt="intel bubble" ></img></div>
+  </div>
 <!-- <h3 class="note1">Journey Map</h3> -->
 <!-- <h2 class="parttitle">App System</h2> -->
-<p class="description mapdescription">According to the user journey, we found opportunities in stages: <span class="hilight">before bullying</span>, <span class="hilight">during bullying</span>, and <span class="hilight">after bullying</span>. </br></br>Therefore, we came up with 3 major use cases, <span class="hilight">Education</span>, <span class="hilight">Emergency</span>, and <span class="hilight">Protection</span>, to aim at problems of the 3 bully problems.</p>
-<img class="journeymap" src="assets/img/appsystem.svg"></img>
-<table class="imgrid">
-  <tr>
-    <th class="grid4" ><img class="imgingrid" src="assets/process/process1.png" alt="intel bubble" ></img></th>
-    <th class="grid4" ><img class="imgingrid" src="assets/process/process2.png" alt="intel bubble" ></img></th>
-  </tr>
-</table>
+  <p class="description mapdescription">According to the user journey, we found opportunities in stages: <span class="hilight">before bullying</span>, <span class="hilight">during bullying</span>, and <span class="hilight">after bullying</span>. </br></br>Therefore, we came up with 3 major use cases, <span class="hilight">Education</span>, <span class="hilight">Emergency</span>, and <span class="hilight">Protection</span>, to aim at problems of the 3 bully problems.</p>
+  <img class="journeymap" src="assets/img/appsystem.svg"></img>
+  <table class="imgrid">
+    <tr>
+      <th class="grid4" ><img class="imgingrid" src="assets/process/process1.png" alt="intel bubble" ></img></th>
+      <th class="grid4" ><img class="imgingrid" src="assets/process/process2.png" alt="intel bubble" ></img></th>
+    </tr>
+  </table>
+
+  <div class="gallery">
+    <div><img class="imgingrid" src="assets/process/process1.png" alt="intel bubble" ></img></div>
+    <div><img class="imgingrid" src="assets/process/process2.png" alt="intel bubble" ></img></div>
+  </div>
+
 </div>
 
 <div id="ux">
