new heading image

--- a/bubble/index.html
+++ b/bubble/index.html
@@ -212,7 +212,7 @@ Not all students have access to a smartphone, but all students have an ID card. 
 
 <div id="appendix">
 <h2 class="parttitle">APPENDIX</h2>
-<p class="description mapdescription">Research information is from: <span class="hilight">Petrosina, Guckenberg, DeVoe + Hanson, 2010 <br /> Hawkins, Pepler + Craig, 2013</span><br />Photos are from <span class="hilight">internet</span><br /><br /><br /></p>
+<p class="description mapdescription">Research information is from: <span class="hilight">Petrosina, Guckenberg, DeVoe + Hanson, 2010 <br /> Hawkins, Pepler + Craig, 2013</span><br />Photos are from <span class="hilight">internet</span><br />Heading Image (unsplash.com):<span class="hilight"> <a target="_blank" href="https://www.alexisrbrown.com">Alexis Brown</a></span><br /><br /><br /></p>
 <!-- <p class="note1">What is Bubble?</p> -->
 
 </div>
