meta tag included

--- a/bubble/index.html
+++ b/bubble/index.html
@@ -14,6 +14,13 @@
     <link rel="apple-touch-icon-precomposed" sizes="180x180" href="assets/icons/webtag.svg">
 
      <meta name="apple-mobile-web-app-capable" content="yes" />
+
+     <meta property="og:url"                content="http://zxue.me" />
+     <meta property="og:title"              content="Bubble - Zhiyu Xue" />
+     <meta property="og:description"        content="Let's put an end to bullying" />
+     <meta property="og:image"              content='http://work.zxue.me/bubble/assets/img/headpic.png' />
+
+
   </head>
   <body>
 
