--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link rel="apple-touch-icon-precomposed" sizes="180x180" href="assets/icons/webtag.svg">
 
      <meta name="apple-mobile-web-app-capable" content="yes" />
+     <link rel="apple-touch-icon-precomposed" sizes="180x180" href="assets/icons/app.png">
+     <meta name="apple-mobile-web-app-status-bar-style" content="translucent" />
+     
   </head>
   <body>
 
