new tabs on butt

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
   </div>
 
 <div id="mybutt">
-  <div class="mycopyright"><a href="http://resume.zxue.me" ><span class="myrightfont"><span class="mycopyrightc">&#9426;  &nbsp</span> 2016 ZHIYU XUE</span></a></div><div class="mycontact"><a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><span class="myrightfont">CONTACT ME</span></a></div>
+  <div class="mycopyright"><a href="http://resume.zxue.me" target="_blank"><span class="myrightfont"><span class="mycopyrightc">&#9426;  &nbsp</span> 2016 ZHIYU XUE</span></a></div><div class="mycontact"><a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><span class="myrightfont">CONTACT ME</span></a></div>
 
- <a href="https://medium.com/@reajixue" ><div class="mysharebuttom1">M</div></a> <a href="https://twitter.com/reajixue" ><div class="mysharebuttom2">t</div></a> <a href="http://www.linkedin.com/in/zhiyuxue" ><div class="mysharebuttom3">in</div></a>
+ <a href="https://medium.com/@reajixue" target="_blank"><div class="mysharebuttom1">M</div></a> <a href="https://twitter.com/reajixue" target="_blank"><div class="mysharebuttom2">t</div></a> <a href="http://www.linkedin.com/in/zhiyuxue" target="_blank"><div class="mysharebuttom3">in</div></a>
 </div>
 
 <script>
