--- a/mixx/index.html
+++ b/mixx/index.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>24.7MIXX - Zhiyu Xue</title>
-    <meta name="author" content="Zhiyu(Reaji) Xue" />
+    <meta name="author" content="Zhiyu Xue" />
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="../css/butt.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <link rel="shortcut icon" href="../assets/icons/webtag.png">
     <link rel="apple-touch-icon-precomposed" sizes="180x180" href="assets/icons/webtag.svg">
@@ -55,10 +57,12 @@
   <body>
 
 <div id="nav">
-      <div class="title"><a href="http://zxue.me">ZHIYU XUE</a></div>
-      <div class="manu about"><a href="http://about.zxue.me">ABOUT</a></div>
-      <div class="manu works"><a href="http://work.zxue.me">WORK</a></div>
+     <div class="title"><a href="http://zxue.me">ZHIYU <span>XUE</span></a></div>
+      <a href="http://about.zxue.me"><div class="menu about">ABOUT<div class="underline"></div></div></a>
+      <a href="http://work.zxue.me"><div class="menu work">WORK <div class="underline"></div></div></a>
   </div>
+  <div id="navbackground"></div>
+  <div id="navbackground2"></div>
 
   <img class="splashscreen"src="assets/img/splashscreen1.svg" />
 
@@ -146,6 +150,21 @@
 
   <a href="https://www.facebook.com/Mr.douBlelBean"><div class="mysharebuttom1">f</div></a> <a href="https://twitter.com/reajixue"><div class="mysharebuttom2">t</div></a> <a href="http://www.linkedin.com/in/zhiyuxue"><div class="mysharebuttom3">in</div></a>
 </div>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-74973728-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.js"></script>
+<script type ="text/javascript" src="js/javascript.js"></script>
 
 
 </body>
