--- a/bubble/index.html
+++ b/bubble/index.html
@@ -104,12 +104,6 @@
 <!-- <h2 class="parttitle">App System</h2> -->
   <p class="description mapdescription">According to the user journey, we found opportunities in stages: <span class="hilight">before bullying</span>, <span class="hilight">during bullying</span>, and <span class="hilight">after bullying</span>. </br></br>Therefore, we came up with 3 major use cases, <span class="hilight">Education</span>, <span class="hilight">Emergency</span>, and <span class="hilight">Protection</span>, to aim at problems of the 3 bully problems.</p>
   <img class="journeymap" src="assets/img/appsystem.svg"></img>
-  <table class="imgrid">
-    <tr>
-      <th class="grid4" ><img class="imgingrid" src="assets/process/process1.png" alt="intel bubble" ></img></th>
-      <th class="grid4" ><img class="imgingrid" src="assets/process/process2.png" alt="intel bubble" ></img></th>
-    </tr>
-  </table>
 
   <div class="gallery">
     <div><img class="imgingrid" src="assets/process/process1.png" alt="intel bubble" ></img></div>
@@ -225,7 +219,7 @@ Not all students have access to a smartphone, but all students have an ID card. 
 </div>
 
 <div id="mybutt">
-  <div class="mycopyright"><a href="http://resume.zxue.me" target="_blank"><span class="myrightfont"><span class="mycopyrightc">&#9426; &nbsp</span> 2016 ZHIYU XUE &nbsp&nbsp&nbsp&nbsp</span></a><span class="myrightfont">I DESIGNED AND CODED THIS WEBSITE.</span></div>
+  <div class="mycopyright"><a href="http://resume.zxue.me" target="_blank"><span class="myrightfont"><span class="mycopyrightc">&#9426; &nbsp</span> 2016 ZHIYU XUE &nbsp&nbsp&nbsp&nbsp</span></a></div>
 
   <a href="https://medium.com/@reajixue" target="_blank"><div class="mysharebuttom1">M</div></a> <a href="https://twitter.com/reajixue" target="_blank"><div class="mysharebuttom2">t</div></a> <a href="http://www.linkedin.com/in/zhiyuxue" target="_blank"><div class="mysharebuttom3">in</div></a>
 </div>
