experience map is up

--- a/mixx/index.html
+++ b/mixx/index.html
@@ -172,8 +172,8 @@
     <div><img class="imgingrid" src="assets/img/logotemp1-4.png" alt="virgin american music mixx" ></img></div>
   </div>
 
- <!--    <img class="showcasemap"src="assets/img/map.png" />
-      <img class="showcase"src="assets/img/brand.png" /> -->
+   
+ <!--      <img class="showcase"src="assets/img/brand.png" /> -->
 </div>
 
 <img class="showcase"src="assets/img/phone.png" />
@@ -235,7 +235,7 @@ Users can navigate their current playlist by swiping up, swiping down brings the
 
 
   </table> -->
-
+      <img class="showcasemap"src="assets/img/map.png" />
 
      <div class="mapcontain">
       <div class="nointeract"><h1>Local Radio - An auditory sense of where you are.<br><span>When your airplane flies over a new area, local music will begin broadcasting.<span></h1></div>
