nav update to all page

--- a/companionship/index.html
+++ b/companionship/index.html
@@ -6,6 +6,8 @@
     <title>Friendship - Zhiyu Xue</title>
     <meta name="author" content="Zhiyu (Reaji) Xue" />
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="../css/mybutt.css">
+    <link rel="stylesheet" href="../css/nav.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <link rel="shortcut icon" href="../assets/icons/webtag.png">
     <link rel="apple-touch-icon-precomposed" sizes="180x180" href="assets/icons/webtag.svg">
@@ -26,10 +28,12 @@
 
 
 <div id="nav">
-      <div class="title"><a href="http://zxue.me">ZHIYU XUE</a></div>
-      <div class="manu about"><a href="http://about.zxue.me">ABOUT</a></div>
-      <div class="manu works"><a href="http://work.zxue.me">WORK</a></div>
+     <div class="title"><a href="http://zxue.me">ZHIYU <span>XUE</span></a></div>
+      <a href="http://about.zxue.me"><div class="menu about">ABOUT<div class="underline"></div></div></a>
+      <a href="http://work.zxue.me"><div class="menu work">WORK <div class="underline"></div></div></a>
   </div>
+  <div id="navbackground"></div>
+  <div id="navbackground2"></div>
   
 <div id="content">
 
@@ -107,9 +111,9 @@ Priest had a relationship, but it did not work out. He advises Re to help people
 
 
 <div id="mybutt">
-  <div class="mycopyright"><a href="http://resume.zxue.me"><span class="myrightfont"><span class="mycopyrightc">&#9426; &nbsp</span> 2016 ZHIYU XUE</span></a></div>
+  <div class="mycopyright"><a href="http://resume.zxue.me" target="_blank"><span class="myrightfont"><span class="mycopyrightc">&#9426;  &nbsp</span> 2016 ZHIYU XUE</span></a></div><div class="mycontact"><a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><span class="myrightfont">CONTACT ME</span></a></div>
 
-  <a href="https://www.facebook.com/Mr.douBlelBean"><div class="mysharebuttom1">f</div></a> <a href="https://twitter.com/reajixue"><div class="mysharebuttom2">t</div></a> <a href="http://www.linkedin.com/in/zhiyuxue"><div class="mysharebuttom3">in</div></a>
+ <a href="https://medium.com/@reajixue" target="_blank"><div class="mysharebuttom1">M</div></a> <a href="https://twitter.com/reajixue" target="_blank"><div class="mysharebuttom2">t</div></a> <a href="http://www.linkedin.com/in/zhiyuxue" target="_blank"><div class="mysharebuttom3">in</div></a>
 </div>
 
 
