privacy butler is up working

--- a/privacybutler/index.html
+++ b/privacybutler/index.html
@@ -54,9 +54,9 @@
   </p>
 
   <!-- <h4 class="quotation">“There’s little things that happen every day. What can you as interaction designers do with things that happen every day, how can you make these little boring things exciting.” <br/>-Aynne Valencia (Instructor)</h4> -->
-
-   
- 
+<div class="videoWrapper">
+     <iframe src="https://player.vimeo.com/video/195986070?color=06D506&title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+ </div>
 
 
 <div id="impact">
@@ -72,6 +72,9 @@
     <div><img class="imgingrid" src="assets/img/field3.png" alt="privacy butler" ></img></div>
     <div><img class="imgingrid" src="assets/img/field4.png" alt="privacy butler" ></img></div>
   </div>
+
+
+
 </div>
 
 
@@ -93,13 +96,14 @@
 
 
    <tr class="mobileview">
-    <th class="grid4" ><img class="imgingrid" src="assets/img/concept3.png" alt="virgin american music mixx"></img></th>
-    <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">Designing for social activists</span><br>Who are frequently being targeted by the government simply because they hold opposing views. After talking to this group and participating in their events, I found that organizers of social movements are well protected, but their members lack proper protection. The members either do not put forth effort or are not aware of the methods of privacy protection.</p></th>
+    
+    <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">Designing for social activists<br/></span><br/>Who are frequently being targeted by the government simply because they hold opposing views. After talking to this group and participating in their events, I found that organizers of social movements are well protected, but their members lack proper protection. The members either do not put forth effort or are not aware of the methods of privacy protection.<br/><br/><img class="imgingrid" style="max-width:300px;" src="assets/img/concept4.svg" alt="privacy butler"></p></th>
+    <th class="grid4" ><img class="imgingrid" src="assets/img/concept3.png" alt="privacy butler"></img></th>
   </tr>
 
    <tr class="fullview">
-    <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">Designing for social activists</span><br>Who are frequently being targeted by the government simply because they hold opposing views. After talking to this group and participating in their events, I found that organizers of social movements are well protected, but their members lack proper protection. The members either do not put forth effort or are not aware of the methods of privacy protection.</p></th>
-        <th class="grid4" ><img class="imgingrid" src="assets/img/concept3.png" alt="virgin american music mixx"></img></th>
+    <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">Designing for social activists<br/></span><br>Who are frequently being targeted by the government simply because they hold opposing views. After talking to this group and participating in their events, I found that organizers of social movements are well protected, but their members lack proper protection. The members either do not put forth effort or are not aware of the methods of privacy protection.<br/><br/><img class="imgingrid" style="max-width:300px;" src="assets/img/concept4.svg" alt="privacy butler"></p></th>
+        <th class="grid4" ><img class="imgingrid" src="assets/img/concept3.png" alt="privacy butler"></img></th>
   </tr>
 </table>
 
@@ -113,202 +117,64 @@
  <table class="imgrid">
 
   <tr>
-    <th class="grid4" ><img class="imgingrid" src="assets/img/ux/foryou.png" alt="virgin american music mixx" ></img></th>
-    <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">For You</span><br>During the onboarding process, users will designate which genres and artists they most enjoy. As soon as they log into the application, they can view music featured by the application that best suits their likes.</p></th>
+    <th class="grid4" ><img class="imgingrid" src="assets/img/ui/ui1.gif" alt="privacy butler" ></img></th>
+    <th class="grid4 annotate" ><p class="description mapdescription" ><span class="hilight" >Share posts with</span> the people you only want to share with.<br/><br/><span class="hilight">Location Blur</span> shows where you are protesting but not your exact location.</th>
   </tr>
 
    <tr class="mobileview">
-    <th class="grid4" ><img class="imgingrid" src="assets/img/ux/login.png" alt="virgin american music mixx"></img></th>
-    <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">Log In & Register</span><br>Users can log in using their phone numbers; later, they can manage which devices are allowed at the Virgin America website.</p></th>
+    <th class="grid4" ><img class="imgingrid" src="assets/img/ui/ui2.gif" alt="privacy butler"></img></th>
+    <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">Obscure faces</span> of those standing by your side or automatically obscure faces.<br/><br/><span class="hilight">Privatize personal information</span> on social networks such as your address and contact info.</p></th>
   </tr>
 
    <tr class="fullview">
-    <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">Log In & Register</span><br>Users can log in using their phone numbers; later, they can manage which devices are allowed at the Virgin America website.</p></th>
-        <th class="grid4" ><img class="imgingrid" src="assets/img/ux/login.png" alt="virgin american music mixx"></img></th>
+    <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">Obscure faces</span> of those standing by your side or automatically obscure faces.<br/><br/><span class="hilight">Privatize personal information</span> on social networks such as your address and contact info.</p></th>
+        <th class="grid4" ><img class="imgingrid" src="assets/img/ui/ui2.gif" alt="privacy butler"></img></th>
   </tr>
 
    <tr>
-    <th class="grid4" ><img class="imgingrid" src="assets/img/ux/music.png" alt="virgin american music mixx" ></img></th>
-    <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">Now Playing</span><br>
-Users can navigate their current playlist by swiping up, swiping down brings them back to the last page they visited.</p></th>
-  </tr>
-
- <tr>
-    <!-- <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">User Groups</span><br>At the Login screen, we separate students, teachers, and parents because the content specifically targets to different user groups. </p></th> -->
-  </tr>
-</table>
-
-
-<!--    <table id="inflight">
-    <tr>
-      <td class="lg"> <img class="showcase"src="assets/img/playlist.png" /></td>
-      <td class="lg">
-    <h1 class="tagline2">On Air Entertainment</h1>
-    <p class="tagline2"><br />More entertaining than ever, Virgin America is the airline people most enjoy flying with. People love the reinvented entertainment experience that Virgin offers. Now, 24.7Mixx offers a seamless music service by bringing your playlist on to the in-flight screens and magnify users' travel experience with local cultural music.<br><a href="http://zxue.me/24-7mixx/design.html">More Info</a></p>
-  </td>
-  </tr>
- 
- <tr >
-  <td class="sm"><img class="showcase"src="assets/img/playlist.png" /></td>
- </tr>
-
-  <tr ><td class="sm">
- <h1 class="tagline2">On Air Entertainment</h1>
-    <p class="tagline2"><br />More entertaining than ever, Virgin America is the airline people most enjoy flying with. People love the reinvented entertainment experience that Virgin offers. Now, 24.7Mixx offers a seamless music service by bringing your playlist on to the in-flight screens and magnify users' travel experience with local cultural music.<br><a href="http://zxue.me/24-7mixx/design.html">More Info</a></p>
-  </td>
- </tr>
-
-
-  </table> -->
-      <img class="showcasemap"src="assets/img/map.png" />
-
-     <div class="mapcontain">
-      <div class="nointeract"><h1>Local Radio - An auditory sense of where you are.<br><span>When your airplane flies over a new area, local music will begin broadcasting.<span></h1></div>
-     <div id="map"></div>
-     <img class="myflyanime" src="assets/img/Airplane.svg" />
-     <img class="localradio" src="assets/img/Notif.png" />
-     </div>
- <table class="imgrid">
-
-   <tr>
-    <th class="grid4" ><img class="imgingrid" src="assets/img/ui/air4.png" alt="virgin american music mixx" ></img></th>
-    <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">Local Radio</span><br>
-      When I interviewed potential users, many of them expressed their excitement when they visit new places. At the same time, they are fearful that they know nothing of the place they'll be visiting. Therefore, a radio station to play local music will help the user better connect to their environment through music.</p></th>
-  </tr>
-
-  
+    <th class="grid4" ><img class="imgingrid" src="assets/img/ui/ui3.gif" alt="privacy butler" ></img></th>
+    <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">Protest protection mode</span> will help you speed up the safe posting process.</p></th>
+  </tr>  
 
    <tr class="mobileview">
-    <th class="grid4" ><img class="imgingrid" src="assets/img/ui/air1.png" alt="virgin american music mixx"></img></th>
-    <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">Log In</span><br>The application will register which flight is checked in under your name. 24.7 Mixx allows multiple users on any one account, if you have friends or family flying alongside you, all of you can enjoy the service provided.</p></th>
+    <th class="grid4" ><img class="imgingrid" src="assets/img/ui/ui3.gif" alt="privacy butler"></img></th>
+    <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">Protest protection mode</span> will help you speed up the safe posting process.</p></th>
   </tr>
 
    <tr class="fullview">
-    <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">Log In</span><br>The application will register which flight is checked in under your name. 24.7 Mixx allows multiple users on any one account, if you have friends or family flying alongside you, all of you can enjoy the service provided.</p></th>
-        <th class="grid4" ><img class="imgingrid" src="assets/img/ui/air1.png" alt="virgin american music mixx"></img></th>
+    <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">Follow people</span> without exposing your connections because NSA will target people based on their connections with targeted people.</p></th>
+        <th class="grid4" ><img class="imgingrid" src="assets/img/ui/ui4.gif" alt="privacy butler"></img></th>
   </tr>
 
 <tr>
-    <th class="grid4" ><img class="imgingrid" src="assets/img/ui/air2.png" alt="virgin american music mixx" ></img></th>
-    <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">Playlist</span><br>24.7 Mixx will download your preferred playlist before the flight, saving you time when in flight.</p></th>
+    <th class="grid4" ><img class="imgingrid" src="assets/img/ui/ui5.png" alt="privacy butler" ></img></th>
+    <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">Tips and tools</span> help you better prepare for your daily life and events and better protect your other communication.</p></th>
   </tr>
 
- <tr>
-    <!-- <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">User Groups</span><br>At the Login screen, we separate students, teachers, and parents because the content specifically targets to different user groups. </p></th> -->
+    <tr class="mobileview">
+    <th class="grid4" ><img class="imgingrid" src="assets/img/ui/ui6.png" alt="privacy butler"></img></th>
+    <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">More | Customization</span><br><br>Customize your protection mode<br/>Customize your VPN<br/>Monitor background data<br/>Contact ACLU experts.</p></th>
+  </tr>
+
+   <tr class="fullview">
+    <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">More | Customization</span><br><br>Customize your protection mode<br/>Customize your VPN<br/>Monitor background data<br/>Contact ACLU experts.</p></th>
+        <th class="grid4" ><img class="imgingrid" src="assets/img/ui/ui6.png" alt="privacy butler"></img></th>
   </tr>
 </table>
 </div>
 
-<img class="showcase"src="assets/img/mixx3.png" />
-
-
-<div id="ui">
-<h2 class="parttitle">UI GALLERY</h2>
-<!-- <p class="description">The students' privacy is what we want to protect the most. In order to achieve this, we carefully keep students out of surveillance and give them space to communicate with their parents or teachers.</p> -->
-<!-- <p class="note1">What is Bubble?</p> -->
-<table class="imgrid">
-
-  <tr>
-    <th class="grid4" ><img class="imgingrid" src="assets/img/ui/phone1.png" alt="virgin american music mixx" ></img></th>
-    <th class="grid4" ><img class="imgingrid" src="assets/img/ui/phone2.png" alt="virgin american music mixx" ></img></th>
-  </tr>
-
-   <tr>
-     <th class="grid4" ><img class="imgingrid" src="assets/img/ui/phone3.png" alt="virgin american music mixx" ></img></th>
-    <th class="grid4" ><img class="imgingrid" src="assets/img/ui/phone4.png" alt="virgin american music mixx" ></img></th>
-  </tr>
-
-  <tr>
-     <th class="grid4" ><img class="imgingrid" src="assets/img/ui/phone5.png" alt="virgin american music mixx" ></img></th>
-    <th class="grid4" ><img class="imgingrid" src="assets/img/ui/phone6.png" alt="virgin american music mixx" ></img></th>
-  </tr>
-
-  <tr>
-     <th class="grid4" ><img class="imgingrid" src="assets/img/ui/phone7.png" alt="virgin american music mixx" ></img></th>
-    <th class="grid4" ><img class="imgingrid" src="assets/img/ui/phone8.png" alt="virgin american music mixx" ></img></th>
-  </tr>
-  <tr>
-     <th class="grid4" ><img class="imgingrid" src="assets/img/ui/phone9.png" alt="virgin american music mixx" ></img></th>
-    <th class="grid4" ><img class="imgingrid" src="assets/img/ui/phone10.png" alt="virgin american music mixx" ></img></th>
-  </tr>
-   
-  <tr>
-     <th class="grid4" ><img class="imgingrid" src="assets/img/ui/phone11.png" alt="virgin american music mixx" ></img></th>
-    <th class="grid4" ><img class="imgingrid" src="assets/img/ui/phone12.png" alt="virgin american music mixx" ></img></th>
-  </tr>
-
-  <tr>
-    <th class="grid4" ><img class="imgingrid" src="assets/img/ui/air1.png" alt="virgin american music mixx" ></img></th>
-    <th class="grid4" ><img class="imgingrid" src="assets/img/ui/air2.png" alt="virgin american music mixx" ></img></th>
-  </tr>
-
-     <tr>
-    <th class="grid4" ><img class="imgingrid" src="assets/img/ui/air3.png" alt="virgin american music mixx" ></img></th>
-    <th class="grid4" ><img class="imgingrid" src="assets/img/ui/air4.png" alt="virgin american music mixx" ></img></th>
-  </tr>
-
-</table>
-
-<div class="gallery">
-<div><img class="imgingrid" src="assets/img/ui/phone1.png" alt="virgin american music mixx" ></img></div>
-<div><img class="imgingrid" src="assets/img/ui/phone2.png" alt="virgin american music mixx" ></img></div>
-<div><img class="imgingrid" src="assets/img/ui/phone3.png" alt="virgin american music mixx" ></img></div>
-<div><img class="imgingrid" src="assets/img/ui/phone4.png" alt="virgin american music mixx" ></img></div>
-<div><img class="imgingrid" src="assets/img/ui/phone5.png" alt="virgin american music mixx" ></img></div>
-<div><img class="imgingrid" src="assets/img/ui/phone6.png" alt="virgin american music mixx" ></img></div>
-<div><img class="imgingrid" src="assets/img/ui/phone7.png" alt="virgin american music mixx" ></img></div>
-<div><img class="imgingrid" src="assets/img/ui/phone8.png" alt="virgin american music mixx" ></img></div>
-<div><img class="imgingrid" src="assets/img/ui/phone9.png" alt="virgin american music mixx" ></img></div>
-<div><img class="imgingrid" src="assets/img/ui/phone10.png" alt="virgin american music mixx" ></img></div>
-<div><img class="imgingrid" src="assets/img/ui/phone11.png" alt="virgin american music mixx" ></img></div>
-<div><img class="imgingrid" src="assets/img/ui/phone12.png" alt="virgin american music mixx" ></img></div>
+<div id="presentation">
+<h2 class="parttitle">PRESENTATION</h2>
+<p class="description"><span class="hilight">coming soon</span></p>
 </div>
 
-<div class="gallery">
-<div><img class="imgingrid" src="assets/img/ui/air0.png" alt="virgin american music mixx" ></img></div>
-<div><img class="imgingrid" src="assets/img/ui/air1.png" alt="virgin american music mixx" ></img></div>
-<div><img class="imgingrid" src="assets/img/ui/air2.png" alt="virgin american music mixx" ></img></div>
-<div><img class="imgingrid" src="assets/img/ui/air3.png" alt="virgin american music mixx" ></img></div>
-<div><img class="imgingrid" src="assets/img/ui/air4.png" alt="virgin american music mixx" ></img></div>
-</div>
-
-</div>
-
-<div id="appendix">
+<!-- <div id="appendix">
 <h2 class="parttitle">APPENDIX</h2>
 <p class="description mapdescription">Research information is from: <span class="hilight">Interviewing users</span><br />Photos are from <span class="hilight">internet + Virgin America</span><br /><br /><br /></p>
-<!-- <p class="note1">What is Bubble?</p> -->
 
-</div>
+</div> -->
 
-   <!--    <table id="phone">
-    <tr>
-       <td class="lg">
-    <h1 class="tagline2">Small Screen Lifestyle</h1>
-    <p class="tagline2"><br />A beautiful new way to keep in touch with your favorite music. Our music service isn't only offered in-flight. But also in your everyday life. It's intended for on-the-go entertainment to keep our users relaxed. 24.7MIXX adapts to your listening habits and gives you music recommendations like a bartender would.<br><a href="http://zxue.me/24-7mixx/design.html">More Info</a></p>
-  </td>
-      <td class="lg"> <img class="showcase"src="assets/img/phoneplay.png" /></td>
-     
-  </tr>
-
-<tr >
-  <td class="sm"><img class="showcase"src="assets/img/phoneplay.png" /></td>
- </tr>
-
-  <tr ><td class="sm">
- <h1 class="tagline2">Small Screen Lifestyle</h1>
-    <p class="tagline2"><br />A beautiful new way to keep in touch with your favorite music. Our music service isn't only offered in-flight. But also in your everyday life. It's intended for on-the-go entertainment to keep our users relaxed. 24.7MIXX adapts to your listening habits and gives you music recommendations like a bartender would.<br><a href="http://zxue.me/24-7mixx/design.html">More Info</a></p>
-  </td>
- </tr>
-
-  </table>
-   <img class="showcase"src="assets/img/phone.png" />
-   <img class="showcase"src="assets/img/brand.png" />
    
-    <h1 class="tagline3">24.7 MIXX BRANDING</h1>
-    <p class="tagline3"><br />People love Virgin America because Virgin has their own special style of branding and overall charismatic service. 24.7MIXX incorporates Virgin America's signature colors and friendly personality to appeal to everybody. 24.7MIXX is designed to impress; we want our users to feel at home with our service, tell their friends, and use it time and time again.<br><br><a href="http://zxue.me/24-7mixx/assets/brand/logotemp.pdf">More Info</a></p>
-
-    <img class="showcasemap"src="assets/img/map.png" /> -->
 
 </div>
 
